add some largish samples for the performance tests