@@ -84,13 +84,30 @@ class PerformanceTestsExtension {
                 it.attribute(Usage.USAGE_ATTRIBUTE, objects.named(Usage, Usage.JAVA_RUNTIME))
             }
             it.dependencies.add(dependencies.create(v == 'current' ? dependencies.project([path: ':']) : (v.startsWith('4') ? "org.apache.groovy:groovy:$v" : "org.codehaus.groovy:groovy:$v")))
+            it.dependencies.add(dependencies.create(v == 'current' ? dependencies.project([path: ':groovy-swing']) : (v.startsWith('4') ? "org.apache.groovy:groovy-swing:$v" : "org.codehaus.groovy:groovy-swing:$v")))
+            it.dependencies.add(dependencies.create(v == 'current' ? dependencies.project([path: ':groovy-sql']) : (v.startsWith('4') ? "org.apache.groovy:groovy-sql:$v" : "org.codehaus.groovy:groovy-sql:$v")))
+            it.dependencies.add(dependencies.create(v == 'current' ? dependencies.project([path: ':groovy-xml']) : (v.startsWith('4') ? "org.apache.groovy:groovy-xml:$v" : "org.codehaus.groovy:groovy-xml:$v")))
+            it.dependencies.add(dependencies.create(v == 'current' ? dependencies.project([path: ':groovy-templates']) : (v.startsWith('4') ? "org.apache.groovy:groovy-templates:$v" : "org.codehaus.groovy:groovy-templates:$v")))
+            it.dependencies.add(dependencies.create('org.cyberneko:html:1.9.8'))
+            it.dependencies.add(dependencies.create('commons-net:commons-net:3.8.0'))
+            it.dependencies.add(dependencies.create('net.sourceforge.htmlunit:htmlunit:2.63.0'))
+            it.dependencies.add(dependencies.create('berkeleydb:je:3.2.76'))
+            it.dependencies.add(dependencies.create('commons-httpclient:commons-httpclient:3.1'))
+            it.dependencies.add(dependencies.create('net.sf.jopt-simple:jopt-simple:5.0.4'))
+            it.dependencies.add(dependencies.create('com.baulsupp.kolja:jcurses:0.9.5.3'))
+            it.dependencies.add(dependencies.create('mstor:mstor:0.9.9'))
+            it.dependencies.add(dependencies.create('commons-lang:commons-lang:2.6'))
+            it.dependencies.add(dependencies.create('dnsjava:dnsjava:2.1.9'))
+            it.dependencies.add(dependencies.create('net.sourceforge.expectj:expectj:2.0.7'))
+            it.dependencies.add(dependencies.create('jline:jline:2.14.6'))
+            it.dependencies.add(dependencies.create('prevayler:prevayler:2.02.005'))
         }
         def outputFile = layout.buildDirectory.file("compilation-stats-${version}.csv")
         def perfTest = tasks.register("performanceTestGroovy${version}", JavaExec) {
             it.group = "Performance tests"
             it.mainClass.set('org.apache.groovy.perf.CompilerPerformanceTest')
             it.classpath(groovyConf, sourceSets.getByName('test').output)
-            it.jvmArgs = ['-Xms512m', '-Xmx512m', '-XX:MaxPermSize=512m']
+            it.jvmArgs = ['-Xms512m', '-Xmx512m']
             it.outputs.file(outputFile)
             def je = it
             it.doFirst {
